--- a/main.css
+++ b/main.css
@@ -54,11 +54,26 @@ body, html {
   margin: 0 auto;
 }
 
+#tags {
+  position: fixed;
+  width: 90%;
+  height: 30px;
+  top: 160px;
+  border: 1px solid var(--outline);
+  font-size: 12pt;
+  color: var(--text);
+  background-color: var(--background);
+  border-radius: 10px;
+  padding: 10px;
+  outline: none;
+  margin: 0 auto;
+}
+
 #output {
   position: fixed;
   width: 90%;
   height: 300px;
-  top: 180px;
+  top: 230px;
   border: 1px solid var(--outline);
   font-size: 12pt;
   color: var(--text);
@@ -80,7 +95,7 @@ body, html {
   background-color: var(--button);
   width: 90%;
   height: 40px;
-  top: 520px;
+  top: 580px;
   border-radius: 10px;
   border: none;
   margin: 0px auto;
