added focus to tags field

--- a/main.css
+++ b/main.css
@@ -89,6 +89,10 @@ body, html {
   border: 2px solid var(--link);
 }
 
+#tags:focus {
+  border: 2px solid var(--link);
+}
+
 #generate {
   position: fixed;
   color: white;
